--- a/static/bower.json
+++ b/static/bower.json
@@ -13,5 +13,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.0",
+    "font-awesome": "fontawesome#^4.6.3"
+  }
 }
