--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 Django==1.9.8
 MySQL-python==1.2.5
+Pillow==3.3.1
 argparse==1.2.1
+django-appconf==1.0.2
+django-autoslug==1.9.3
+django-avatar==3.0.0
 django-extensions==1.6.7
 django-registration==2.1.2
 six==1.10.0
